# create-python-server

./: CONTRIBUTING.md  README.md  check_imports.out  check_imports.py  check_imports.txt  check_imports_errors.txt  dev.py  dir  dir.txt  ls.txt  pyproject.toml  readme.txt  setup_mcp.sh  tree.text  tree.txt
Test1/: README.md  pyproject.toml
Test1/src/test1/: server.py
TestC/: README.md  pyproject.toml
TestC/src/testc/: server.py
Tst02/: README.md  pyproject.toml
Tst02/src/tst02/: server.py
src/create_mcp_server/: __init__.py  __main__.py
src/create_mcp_server/cli/: commands.py  main.py  prompts.py
src/create_mcp_server/core/: project.py  pyproject.py  template.py
src/create_mcp_server/server/: config.py  manager.py
src/create_mcp_server/templates/: README.md.jinja2  __init__.py.jinja2  config.py.jinja2  core.py.jinja2  server.py.jinja2  test_plugins.py.jinja2
src/create_mcp_server/templates/plugins/: example.py.jinja2  plugins.py
src/create_mcp_server/templates/tests/: test_server.jinja2
src/create_mcp_server/tests/utils/: test_setup.py
src/create_mcp_server/utils/: __init__.py  claude.py  files.py  process.py  setup.py  validation.py
