# File: create_mcp_server/pyproject.toml
# Configuration for create_mcp_server - a tool that generates MCP server projects.
# This is the configuration for the generator tool itself, not for the servers it creates.

[project]
name = "create_mcp_server"
version = "1.0.6.dev0"
description = "Create an Model Context Protocol server project from a template."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthropic, PBC." }]
maintainers = [
    { name = "David Soria Parra", email = "davidsp@anthropic.com" },
    { name = "Justin Spahr-Summers", email = "justin@anthropic.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "packaging>=24.2",
    "toml>=0.10.2",
    "psutil>=5.9.0",  # Added for process monitoring
    "aiohttp>=3.9.0"  # Added for health checks
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "ruff>=0.3.0"
]

[project.scripts]
create_mcp_server = "create_mcp_server.cli.main:cli"
start_mcp_server = "create_mcp_server.cli.main:start"

[project.urls]
Homepage = "https://modelcontextprotocol.io"
Repository = "https://github.com/modelcontextprotocol/create-python-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["src/create_mcp_server/template"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.4"]

[tool.uv.workspace]
members = []