[project]
name = "test1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Koosis", email = "dkoosis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
]

[project.scripts]
test1 = "test1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
