[project]
name = "testc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Koosis", email = "dkoosis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "mcp>=1.3.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
testc = "testc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
