[project]
name = "tst02"
version = "2"
description = "two"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "David Koosis"
email = "dkoosis@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
tst02 = "tst02:main"
